--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,14 +1,20 @@
 {
     "root": true,
+    "extends": "eslint:recommended",
     "env": {
         "node": true,
-        "es6": true
+        "es6": true,
+        "jasmine": true
     },
+    "plugins": [
+        "jasmine"
+    ],
     "parserOptions": {
         "ecmaVersion": 6,
         "sourceType": "module"
     },
     "rules": {
+        "warnIgnored": true,
         "indent": ["error", "tab", { "SwitchCase": 1 }],
         "linebreak-style": ["error", "unix"],
         "no-trailing-spaces": 2,
