--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "devDependencies": {
     "eslint": "^4.18.1",
+    "eslint-plugin-jasmine": "^2.10.1",
     "jasmine": "^3.1.0"
   },
-  "dependencies": {
-  },
+  "dependencies": {},
   "scripts": {
-    "pretest": "eslint ./src/*.js",
-    "test": "jasmine ./*.spec.js"
+    "pretest": "eslint .",
+    "test": "jasmine ./spec/*.spec.js"
   },
   "name": "PCString",
   "description": "description",
