--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "pretest": "eslint .",
     "test": "jasmine ./spec/*.spec.js"
   },
-  "name": "PCString",
+  "name": "pc-string",
   "description": "description",
   "version": "1.0.0",
   "repository": {
