--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "name": "pc-string",
   "description": "description",
   "version": "1.0.0",
+  "license": "MIT",
   "repository": {
     "type": "git",
     "url": "https://github.com/panda-clouds/string.git"
