--- a/package.json
+++ b/package.json
@@ -12,17 +12,17 @@
   "name": "@panda-clouds/string",
   "description": "A javascript helper class for strings",
   "version": "1.0.2",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/panda-clouds/string.git"
+  },
   "author": { "name" : "Marc Smith",
               "email" : "mr.marcsmith@me.com",
-              "url" : "https://pandaclouds.com"
+              "url" : "https://github.com/mrmarcsmith"
             },
   "license": "MIT",
   "main": "src/PCString.js",
   "engines": {
     "node": ">= 8"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/panda-clouds/string.git"
   }
 }
