--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A javascript helper class for strings",
   "main": "src/PCString.js",
   "scripts": {
-    "pretest": "eslint .",
+    "pretest": "eslint --fix .",
     "test": "jest --coverage"
   },
   "repository": {
